--- a/ebook.html
+++ b/ebook.html
@@ -14,6 +14,7 @@
 
 <body onload = goTop();>
     <div id = 'toc'>
+        <h2 id = 'toc-header'> Table of Contents</h2>
         <ul>
             <li class = 'heading'>Overview</li>
                 <ul>
@@ -66,7 +67,7 @@ Vivamus eleifend egestas augue eget pharetra. Mauris in facilisis mauris. Donec 
             <p>Testing testing</p>
     </div>
     <footer>
-        made by Lieu Zheng Hong, 2015
+        <a href = 'lieuzhenghong.com'>made by Lieu Zheng Hong, 2015</a>
         <a href = '#toc' id = 'back-to-top'>back to top</a>
     </footer>
 </body>
