--- a/ebook.html
+++ b/ebook.html
@@ -3,6 +3,7 @@
 <head>
 <title>IH Project</title>
 <link rel = "stylesheet" href = 'style.css' />
+<link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic' rel='stylesheet' type='text/css'>
     
 <script type ="application/javascript">
     function goTop() {
